--- a/service/tardisd.service
+++ b/service/tardisd.service
@@ -5,10 +5,10 @@ After=network.service
 [Service]
 Type=simple
 ExecStart=/bin/sh -ec '\
-    LISTEN=10.0.2.2:30000
-    TARGET=192.168.100.2:30000
-    IFNAME=vpn0
-    IP=172.16.42.1/24
+    LISTEN=10.0.2.2:30000\
+    TARGET=192.168.100.2:30000\
+    IFNAME=vpn0\
+    IP=172.16.42.1/24\
     tardis $LISTEN $TARGET $IFNAME $IP'
 ExecStop=/bin/kill -WINCH ${MAINPID}
 Restart=always
