--- a/service/tardisd.service
+++ b/service/tardisd.service
@@ -4,12 +4,12 @@ After=network.service
 
 [Service]
 Type=simple
-ExecStart=/bin/sh -ec '\
-    LISTEN=10.0.2.2:30000\
-    TARGET=192.168.100.2:30000\
-    IFNAME=vpn0\
-    IP=172.16.42.1/24\
-    tardis $LISTEN $TARGET $IFNAME $IP'
+ExecStart=/bin/bash -ec "\
+    LISTEN=10.0.2.2:30000; \
+    TARGET=192.168.100.1:30000; \
+    IFNAME=vpn0; \
+    IP=172.16.42.1/24; \
+    tardis $LISTEN $TARGET $IFNAME $IP"
 ExecStop=/bin/kill -WINCH ${MAINPID}
 Restart=always
 
