--- a/service/tardisd.service
+++ b/service/tardisd.service
@@ -18,10 +18,9 @@ After=network.service
 Type=simple
 ExecStart=/bin/bash -ec "\
     LISTEN=0.0.0.0:30000; \
-    TARGET=192.168.100.1:30000; \
     IFNAME=vpn0; \
     IP=172.16.42.1/24; \
-    tardis $LISTEN $TARGET $IFNAME $IP"
+    tardis server $LISTEN $IFNAME $IP"
 ExecStop=/bin/kill -WINCH ${MAINPID}
 Restart=always
 
