--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 futures = "0.1"
+num_cpus = "1.16.0"
 tokio = { version = "1.31.0", features = ["full"] }
 tokio-core = "0.1.18"
 tun-tap = { path = "./modules/tuntap" }
