--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ futures = "0.1"
 tokio = { version = "1.31.0", features = ["full"] }
 tokio-core = "0.1.18"
 tun-tap = { path = "./modules/tuntap" }
+udp-stream = { path = "./modules/udp-stream"}
+
